--- a/reviewpage.css
+++ b/reviewpage.css
@@ -205,12 +205,20 @@ background-color: #717171;
 }
 
 .review-content{
-    margin-top: 20px;
+    margin-top: 50px;
 }
 
 .title{
     font-size: 18px;
     font-weight: 600;
+}
+
+.threedot:hover{
+    color: #808080;
+    background-color: rgba(255, 255, 255, 0.5);
+    border-radius: 100%;
+    
+
 }
 
 .paragraph{
@@ -227,9 +235,9 @@ background-color: #717171;
 }
 
 .threedot{
-    margin-top: 12px;
+    margin-top: 6px;
     position: absolute;
-    right: 140px;
+    right: 10px;
     background: none;
     border: none;
 
@@ -240,18 +248,438 @@ background-color: #717171;
     height: 20px;
 }
 
+.reaction{
+    margin-left: 840px;
+    position: absolute;
+    margin-top: 7px;
+}
+
+.helpful, .unhelpful {
+    background: none;
+    border: none;
+    cursor: pointer;
+    transition: transform 0.3s ease;
+    position: relative;
+    margin-left: -5px;
+
+}
+
+.ratings{
+    position: absolute;
+    
+    margin-top: -40px;
+}
+
+.ratings:not(:checked) > input {
+    position:absolute;
+    top:-9999px;
+}
+
+.ratings:not(:checked) > label {
+    float:right;
+    width:1em;
+    overflow:hidden;
+    white-space:nowrap;
+    cursor:pointer;
+    font-size:30px;
+    color:#ccc;
+}
+
+.ratings:not(:checked) > label:before {
+    content: '★ ';
+}
+
+
+
+.ratings > input:checked ~ label {
+    color: #ffc700;    
+}
+
+.ratings:not(:checked) > label:hover,
+.ratings:not(:checked) > label:hover ~ label {
+    color: #deb217;  
+}
+
+.ratings > input:checked + label:hover,
+.ratings > input:checked + label:hover ~ label,
+.ratings > input:checked ~ label:hover,
+.ratings > input:checked ~ label:hover ~ label,
+.ratings > label:hover ~ input:checked ~ label {
+    color: #c59b08;
+}
+
+
+.helpful img, .unhelpful img {
+    width: 25px;
+    height: 25px;
+}
+
+.helpful:hover, .unhelpful:hover {
+    transform: scale(1.1);
+}
+
+.helpful:hover::after {
+    content: "Mark as Helpful";
+    position: absolute;
+    bottom: -20px;
+    left: 50%;
+    transform: translateX(-50%);
+    background-color: #000;
+    color: #fff;
+    padding: 5px 10px;
+    border-radius: 5px;
+    font-size: 12px;
+    white-space: nowrap;
+}
+
+.unhelpful:hover::after {
+    content: "Mark as Unhelpful";
+    position: absolute;
+    bottom: -20px;
+    left: 50%;
+    transform: translateX(-50%);
+    background-color: #000;
+    color: #fff;
+    padding: 5px 10px;
+    border-radius: 5px;
+    font-size: 12px;
+    white-space: nowrap;
+}
+
+.numberofreact{
+    color: #4D2D18;
+    font-size: 13px;
+    position: relative;
+    margin-bottom: 20px;
+    margin-right: 20px;
+}
+
 .review-box{
     margin-top: 10px;
     max-width: 100%;
     height: auto;
     margin-left: 120px;
     margin-right: 120px;
+    
 }
+
+.plus-sign {
+    background-color: hsl(29, 42%, 69%);
+    border: none;
+    border-radius: 100%;
+    width: 80px;
+    height: 80px;
+    position: fixed;
+    bottom: 0px;
+    right: 0px;
+    transform: translate(-50%, -50%);
+    font-size: 60px; /* Adjust the font size as needed */
+    text-align: center;
+    line-height: 80px; /* Adjust line-height to vertically center the plus sign */
+    color: #fff; /* Adjust color as needed */
+    cursor: pointer;
+    z-index: 10;
+    box-shadow: 0px 4px 8px 0 rgba(0, 0, 0, 0.6);
+    transition: transform 0.3s ease-in-out; /* Apply transition to the transform property */
+}
+
+.plus-sign:hover {
+    transform: translate(-50%, -50%) scale(1.1); /* Apply the transformation on hover */
+}
+
+
+
+.popup {
+    display: none;
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background-color: rgba(0, 0, 0, 0.8); /* Transparent background with a bit of opacity */
+    width: 100%;
+    height: 100%;
+    z-index: 9999; /* Ensure the popup is on top of other content */
+}
+
+.ratings-popup{
+    position: relative;
+    margin-right: 520px; /* Adjust the margin-left to move the ratings to the left */
+    margin-top: -40px;
+}
+
+.ratings-popup:not(:checked) > input {
+    position:absolute;
+    top:-9999px;
+    margin-left: -500px;
+}
+
+.ratings-popup label[title]:hover:after {
+    content: attr(title);
+    position: absolute;
+    margin-left: -100px;
+    margin-top: 70px;
+    padding: 5px;
+    background-color: #333;
+    color: #fff;
+    border-radius: 5px;
+    font-size: 14px;
+}
+
+.ratings-popup:not(:checked) > label {
+    float:right;
+    width:1em;
+    overflow:hidden;
+    white-space:nowrap;
+    cursor:pointer;
+    font-size:50px;
+    color:#ccc;
+
+}
+
+.ratings-popup:not(:checked) > label:before {
+    content: '★ ';
+    
+}
+
+
+
+.ratings-popup > input:checked ~ label {
+    color: #ffc700;  
+      
+}
+
+.ratings-popup:not(:checked) > label:hover,
+.ratings-popup:not(:checked) > label:hover ~ label {
+    color: #deb217;  
+}
+
+.ratings-popup> input:checked + label:hover,
+.ratings-popup > input:checked + label:hover ~ label,
+.ratings-popup > input:checked ~ label:hover,
+.ratings-popup > input:checked ~ label:hover ~ label,
+.ratings-popup > label:hover ~ input:checked ~ label {
+    color: #c59b08;
+}
+
+.popup-content {
+    font-family: 'Poppins', sans-serif;
+    font-size: 20px; 
+    z-index: 3;
+    overflow-y: auto; /* Enable vertical scrolling */
+    background-color: #F4E4C9;
+    margin: 50px auto;
+    border: 1px solid #888;
+    width: 817px;
+    height: 530px;
+    border-radius: 10px;
+    margin-top: 30px;
+    margin-bottom: 25px;
+
+    scrollbar-width: thin; /* For Firefox */
+    scrollbar-color: #888 #F4E4C9; /* For Firefox */
+
+    /* For WebKit browsers like Chrome and Safari */
+    scrollbar-width: thin;
+    scrollbar-color: #888 #F4E4C9;
+}
+
+.popup-content::-webkit-scrollbar {
+    width: 10px; /* Set the width of the scrollbar */
+    border-radius: 5px; /* Set the border-radius of the scrollbar */
+    border: 2px solid #F4E4C9; /* Add border to the scrollbar */
+}
+
+.popup-content::-webkit-scrollbar-track {
+    background: #F4E4C9; /* Set the background color of the track */
+}
+
+.popup-content::-webkit-scrollbar-thumb {
+    background-color: #888; /* Set the color of the scrollbar thumb */
+    border-radius: 5px; /* Set the border-radius of the thumb */
+}
+
+.experience{
+    color: #4D2D18;
+    margin-left: 50px;
+    margin-top: 30px;
+    font-size: 25px;
+    font-weight: 700;
+}
+
+.review-title {
+    font-family: 'Poppins', sans-serif;
+    width: 700px;
+    margin-left: 50px;
+    margin-right: 50px;
+    padding: 10px;
+    border: 3px solid #d1ae8d;
+    border-radius: 10px;
+    box-sizing: border-box;
+    font-size: 16px;
+    margin-top: -10px;
+}
+
+.review-words {
+    font-family: 'Poppins', sans-serif;
+    width: 700px;
+    height: 150px;
+    margin-left: 50px;
+    margin-right: 50px;
+    padding: 10px;
+    margin-top: -10px;
+    border: 3px solid #d1ae8d;
+    border-radius: 10px;
+    box-sizing: border-box;
+    font-size: 16px;
+    vertical-align: top; /* Align the text input to the top */
+}
+
+.review-words ::placeholder{
+    top: 0px;
+}
+
+
+
+.titleyour{
+    color: #4D2D18;
+    margin-left: 50px;
+margin-top: 10px;
+    font-size: 25px;
+    font-weight: 700;
+}
+
+.pin{
+    margin-left: 700px;
+    width: 25px;
+    height: 25px;
+}
+
+
+.button-container{
+    justify-content: center;
+    align-items: center;
+    display: flex;
+    margin-top: -14px;
+    margin-right:52px;
+}
+
+.x{
+    z-index: 3;
+    cursor: pointer;;
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    background: none;
+    border: none;
+    padding: 0;
+    margin: 0;
+}
+
+.close {
+    width: 30px; 
+    height: 30px;
+
+}
+
+.categorized{
+    position: absolute;
+    display: flex;
+    right: 290px;
+    margin-top: 25px;
+}
+
+.button1{
+    margin-right: 10px;
+}
+
+.button1, .button2{
+    width:120px;
+    height: 40px;
+    background-color: #d1ae8d;
+    border: 1px solid #d1ae8d;
+    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
+    border-radius: 10px;
+    color: white;
+}
+
+.button1.clicked {
+    background-color: #F4E4C9; /* Change to your desired color */
+    border-color: #4D2D18;
+    border-width: 3px;
+    color: #4D2D18; /* Text color */
+}
+
+.button2.clicked {
+    background-color: #F4E4C9; /* Change to your desired color */
+    border-color: #4D2D18;
+    border-width: 3px;
+    color: #4D2D18; /* Text color */
+}
+
+
+
+.note{
+    margin-top: 45px;
+    position: absolute;
+    font-size: 15px;
+    color: #4D2D18;
+}
+
+.submit{
+    position: absolute;
+    cursor: pointer;
+    height: 40px;
+    width: 80px;
+    
+    font-size: 15px;
+    background-color: #d1ae8d;
+    font-family: 'Poppins', sans-serif;
+    color: white;
+    border: none;
+    border-radius: 5px;
+}
+
+.submit:hover{
+    background-color: gray;
+}
+
+.writeyour{
+    color: #4D2D18;
+    margin-left: 50px;
+    margin-top: 20px;
+    font-size: 25px;
+    font-weight: 700;
+}
+
+.popup-create{
+    z-index: 40;
+    display: none;
+    position: fixed;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    background-color: rgba(0, 0, 0, 0.5);
+}
+
+.close {
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    cursor: pointer;
+}
+
+
+.review-box {
+    position: relative; /* Ensure the review box is a positioned container */
+}
+
 
 .noofreviews {
     font-size: 15px; /* Adjust font size as needed */
     color: gray; /* Adjust color as needed */
-    margin-left: 343px; /* Add margin between rating and reviews */
+    margin-left: 350px; /* Add margin between rating and reviews */
     margin-top: -47px;
     position: absolute;
 }
@@ -430,6 +858,67 @@ background-color: #717171;
     margin-top: 15px;
       
 }
+
+.image-upload{
+    margin-left: 560px;
+}
+
+.images-container{
+    margin-top: 5px;
+    display: flex;
+
+}
+
+.img{
+    width: 125px;
+    height: 125px;
+    margin-right: 10px;
+    border: 2px solid #d1ae8d;
+}
+
+.modal {
+    display: none;
+    position: fixed;
+    z-index: 999;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.9);
+    overflow: auto;
+  }
+  
+  .modal-content {
+    margin: auto;
+    display: block;
+    margin-top: 50px;
+    max-width: 80%;
+    max-height: 80%;
+  }
+  
+  .close {
+    position: absolute;
+    top: 15px;
+    right: 35px;
+    color: #f1f1f1;
+    font-size: 40px;
+    font-weight: bold;
+    transition: 0.3s;
+  }
+  
+  .close:hover,
+  .close:focus {
+    color: #bbb;
+    text-decoration: none;
+    cursor: pointer;
+  }
+  
+
+.image{
+    width: 100px;
+    height: 100px;
+}
+
 
 .user-button img {
     width: 50px; 
