--- a/view-establishments.css
+++ b/view-establishments.css
@@ -216,7 +216,13 @@ body {
     z-index: 1;
     margin: 50px;
     margin-bottom: -5px;
+    transition: transform 0.3s ease-in-out; /* Apply transition to the transform property */
 }
+
+.review-box:hover{
+    transform: scale(1.01); /* Apply the transformation on hover */
+}
+
 hr{
     width: 90%;
     border-color: #4D2D18;
@@ -293,6 +299,10 @@ hr{
     background-size: 100%;
     background-position: 90%;
     font-family: 'Poppins', sans-serif;
+}
+
+.box{
+    text-decoration: none;
 }
 
 #unit1-background6 {
@@ -392,7 +402,7 @@ margin-left: 2px;
 
 .cafe-address {
     font-size: 12px;
-    color: white;
+    color: #4D2D18;
     margin-top: -20px;
 }
 
